es-base-objects/main/default/objects/Space__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Block Room</fullName>
            </value>
            <value>
                <fullName>Café</fullName>
            </value>
            <value>
                <fullName>Cooking Classroom</fullName>
            </value>
            <value>
                <fullName>Drawing/Watercolor Studio</fullName>
            </value>
            <value>
                <fullName>Exploration Lab</fullName>
            </value>
            <value>
                <fullName>Game Room/Arcade</fullName>
            </value>
            <value>
                <fullName>Music Room</fullName>
            </value>
            <value>
                <fullName>Sand Drawing Tables</fullName>
            </value>
            <value>
                <fullName>Temporary Terrace</fullName>
            </value>
            <value>
                <fullName>Walking Meditation Paths</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>