es-base-objects/main/default/objects/Space__c/fields/Daily_Booking_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Booking_Rate__c</fullName>
    <label>Base Daily Booking Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>