es-base-objects/main/default/objects/Space__c/fields/Minimum_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Capacity__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Minimum Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>