es-base-objects/main/default/objects/Space__c/fields/Predicted_Demand__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Demand__c</fullName>
    <label>Predicted Demand</label>
    <length>80</length>
    <type>Text</type>
</CustomField>