es-base-objects/main/default/objects/Space__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>Category__c</columns>
    <columns>Daily_Booking_Rate__c</columns>
    <columns>Minimum_Capacity__c</columns>
    <columns>Maximum_Capacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>